manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: volunteer-service
  namespace: solidarytech-volunteer
  labels:
    app.kubernetes.io/name: volunteer-service
    app.kubernetes.io/component: volunteer
    app.kubernetes.io/part-of: solidarytech
spec:
  type: ClusterIP
  selector:
    app: volunteer-service
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: 8083
